--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linktree</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <img src="img/arthur.jpg" alt="Arthur" class="avatar">
-    <h1>Arthur F. S. Santos</h1>
-    <h2>Dev. WEB | </h2>
+    <div class="profile">
+        <img src="img/arthur.jpg" alt="Arthur" class="avatar">
+        <h1>Arthur F. S. Santos</h1>
+        <h2>Dev. WEB | </h2>
+    </div>
     
+    <div class="dropdown">
+        <span class="label"><i class="fa-solid fa-link"> Social Links</i></span>
+        <ul class="items">
+            <li><a href=""><i class="fa-brands fa-github"></i>Github</a></li>
+            <li><a href=""><i class="fa-brands fa-instagram"></i>Instagram</a></li>
+            <li><a href=""><i class="fa-brands fa-whatsapp"></i>WhatsApp</a></li>
+            <li><a href=""><i class="fa-brands fa-facebook"></i>Facebook</a></li>
+        </ul>
+    </div>
 </body>
 </html>
